# JSON2TOON-MCP

./: .gitignore  CHANGELOG.md  COMMANDS.md  Dockerfile  LICENSE  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt
examples/: basic_usage.py
src/: __init__.py  advanced_converter.py  mcp_server.py  optimizer.py  pattern_analyzer.py
tests/: __init__.py  test_converter.py  test_pattern_analyzer.py
